feat: agg registro de actividades de los usuarios
