# src/activities/activities.controller.ts
@@ -1,0 +1,46 @@
+import {
+  Body,
+  Controller,
+  Delete,
+  Get,
+  Param,
+  Patch,
+  Post,
+} from '@nestjs/common';
+
+import { ActivityService } from './activities.service';
+import { CreateActivityDto } from './dto/create-activity.dto';
+import { UpdateActivityDto } from './dto/update-activity.dto';
+
+@Controller('activities')
+export class ActivitiesController {
+  constructor(private readonly activitiesService: ActivityService) {}
+
+  @Post()
+  create(@Body() createActivityDto: CreateActivityDto) {
+    return this.activitiesService.create(createActivityDto);
+  }
+
+  @Get()
+  findAll() {
+    return this.activitiesService.findAll();
+  }
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.activitiesService.findOne(+id);
+  }
+
+  @Patch(':id')
+  update(
+    @Param('id') id: string,
+    @Body() updateActivityDto: UpdateActivityDto,
+  ) {
+    return this.activitiesService.update(+id, updateActivityDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.activitiesService.remove(+id);
+  }
+}
